# aec-compiler-toolchain

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: c1-module-change.yml
.github/workflows/: c1-tests.yml
Track-A/: README.md
Track-B/: README.md  scoring.md  spec.md
Track-B/sram/: ASAP7_SRAM_LOCK.sha256  README.md  asap7_sram_wrappers.sv
Track-B/testcases/: README.md
Track-C/C1-compiler/: AGENTS.md  README.md  spec.md
Track-C/C1-compiler/docs/: C1_PROJECT_CHARTER.md  PERFORMANCE_MODEL.md  STATUS.md
Track-C/C1-compiler/docs/performance_targets/: track_c_hint_20260713.json
Track-C/C1-compiler/src/aec_c1/: agent.py  compiler.py  isa.py  legacy_lowering.py  ptx.py  sim.py
Track-C/C1-compiler/tests/: test_architecture_guardrails.py  test_basic_block_local_cse.py  test_dead_result_elimination.py  test_framework.py  test_isa.py  test_local_constant_folding.py  test_m2_scalar_passes.py  test_ptx02.py
Track-C/C2-runtime/: scoring.md  spec.md
compiler/: aec-cc
docs/: ARCHITECTURE_INVARIANTS.md  DEVELOPMENT_POLICY.md  PERFORMANCE_MODEL.md  STATUS.md
src/aec_c1/: isa.py
src/aec_compiler/: compiler.py  legacy_lowering.py
src/aec_compiler/analysis/: uniformity.py
src/aec_compiler/passes/: experimental.py  gemm.py  global_dce.py  local_scalar.py  pipelines.py  scheduler.py
tests/: cmodel_harness.py  test_cmodel.py  test_isa.py  test_m5_gemm.py  test_official_package.py  test_pmem_abi.py
tests/fixtures/: o0_binary_sha256.json
(+186 files in other folders)
