[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aec-compiler"
version = "0.2.0"
description = "A compiler toolchain for the AEC 128-bit instruction set"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "BulletFlying"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
]

[project.scripts]
aec-cc = "aec_compiler.compiler:main"
aec-objdump = "aec_compiler.objdump:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
